--- a/css/estilo.css
+++ b/css/estilo.css
@@ -63,7 +63,7 @@ header#cabecalho h2 {
 header#cabecalho {
     border-bottom: 1px #606060 dashed;
     height: 140px;
-    background: url("../_imagens/glass-logo-peq.jpg") no-repeat 0px 90px;
+    background: url("../imagens/glass-logo-peq.jpg") no-repeat 0px 90px;
 }
 /* Imagens com legendas */
 
