--- a/css/form.css
+++ b/css/form.css
@@ -4,28 +4,42 @@ p {
     text-indent: 0px;
 }
 
+input,
+textarea,
+select {
+    display: block;
+    width: 60%;
+    background: #ffffffc5;
+    border: 2px solid #ddd;
+    margin-top: 5px;
+    font-family: sans-serif;
+    font-weight: normal;
+    font-size: 13pt;
+}
+
+input.inline {
+    display: inline;
+    width: fit-content;
+    margin-left: 10px;
+}
+
 form {
-    width:600px;
+    max-width: 600px;
+    width: 100%;
     margin: auto;
 }
 
 textarea {
-    resize: none;
+    resize: vertical;
 }
 
-input, textarea {
-    font-family: sans-serif;
-    font-weight: normal;
-    font-size: 13pt;
-    background-color: rgba(255, 255, 255, 0.8);
-}
-
-input:hover, textarea:hover {
-    background-color: rgba(136, 136, 136, 0.8);
+input:hover,
+textarea:hover {
+    background-color: #ddd;
 }
 
 legend {
-    color: #888888;
+    color: #888;
     font-weight: bold;
     font-size: 13pt;
     font-family: sans-serif;
@@ -41,7 +55,7 @@ fieldset#usuario {
 }
 
 fieldset#sexo {
-    width: 140px;
+    width: calc(60% - 20px);
 }
 
 fieldset#endereco {
@@ -54,6 +68,28 @@ fieldset#mensagem {
 
 fieldset#pedido {
     background: url("../imagens/icone-pagamento.png") no-repeat 95% 95%;
+}
+
+
+input[type="color"] {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    width: 40px;
+    height: 40px;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+}
+
+input[type="color"]::-webkit-color-swatch {
+    border-radius: 5px;
+    border: 2px solid #ddd;
+}
+
+input[type="color"]::-moz-color-swatch {
+    border-radius: 5px;
+    border: 2px solid #ddd;
 }
 
 
