--- a/css/fotos.css
+++ b/css/fotos.css
@@ -1,18 +1,19 @@
 @charset "UTF-8";
 
 ul#albumFotos {
-    width: 700px;
-    margin: auto;
-    padding: 50px;
-    overflow: hidden;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    gap: 20px;
+    max-width: 650px;
+    width: 90%;
     list-style: none;
+    padding: 0;
+    margin: 0 auto;
 }
 
 ul#albumFotos li {
-    float: left;
-    width: 200px;
-    height: 200px;
-    margin: 10px;
+    aspect-ratio: 1/1;
+    width: 100%;
     border: 5px solid white;
     background-color: white;
     box-shadow: 1px 1px 3px rgba(0,0,0,.4);
@@ -25,12 +26,11 @@ ul#albumFotos li span {
     text-shadow: 1px 1px 1px black;
     background-color: rgba(0,0,0,.3);
     font-size: 9pt;
-    line-height: 370px;
     padding: 5px;
 }
 
 ul#albumFotos li:hover {
-    transform: scale(1.5);
+    transform: scale(1.25);
 }
 
 ul#albumFotos li:hover span {
