--- a/css/media.css
+++ b/css/media.css
@@ -1,10 +1,12 @@
 @charset "UTF-8";
 
 div#tv-radio {
-    width: 900px;
+    max-width: 900px;
+    width: 90%;
     height: 580px;
     margin: auto;
     background: url("../imagens/radio-tv.png") no-repeat;
+    background-size: contain;
 }
 
 audio#musica {
