--- a/css/specs.css
+++ b/css/specs.css
@@ -1,17 +1,24 @@
 @charset "UTF-8";
 
 section#conteudo {
-    width: 1000px;
-    margin: auto;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 40px;
 }
 
 iframe#frame-espec {
-    width: 400px;
-    height: 280px;
+    max-width: 500px;
+    width: 100%;
+    height: 400px;
     border: none;
 }
-
-/*iframe#frame-spec::-webkit-scrollbar {
-    display: none;
-}
-*/
+/* 
+@media (max-width: 768px) {
+    section#conteudo {
+        gap: 0;
+    }
+    section#conteudo > img {
+        display: none;
+    }
+} */
