--- a/css/specs.css
+++ b/css/specs.css
@@ -2,8 +2,8 @@
 
 section#conteudo {
     display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
     gap: 40px;
 }
 
@@ -13,12 +13,3 @@ iframe#frame-espec {
     height: 400px;
     border: none;
 }
-/* 
-@media (max-width: 768px) {
-    section#conteudo {
-        gap: 0;
-    }
-    section#conteudo > img {
-        display: none;
-    }
-} */
